--- a/FinalProject.Web/wwwroot/css/site.css
+++ b/FinalProject.Web/wwwroot/css/site.css
@@ -126,6 +126,22 @@ h1, h2, h3, h4, h5 {
   color: #004d2a;
 }
 
+/**************Delete user modal*/
+/* .modal-header.bg-danger {
+  background-color: #dc3545 !important;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-danger:hover {
+  background-color: #bb2d3b;
+  border-color: #aa2733;
+} */
+
 /***************************Footer styling *********************/
 /*************************** Footer Styling ***************************/
 /* Footer container */
