made carousel smaller on recommendations - recipes page and removed js code

--- a/FinalProject.Web/Views/Home/Recipes.cshtml
+++ b/FinalProject.Web/Views/Home/Recipes.cshtml
@@ -209,53 +209,55 @@
     <h2>Healthy Snack Options</h2>
     <!-- divider for sections-->
     <hr class="section-divider">
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="~/images/recipies/snacks/1.svg" class="d-block w-100" alt="Healthy snack 1">
+    <div class="carousel-container">
+        <div id="carouselExampleAutoplaying" class="carousel slide small-carousel text-center" data-bs-ride="carousel">
+            <div class="center-carousel carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/images/recipies/snacks/1.svg" class="d-block w-100" alt="Healthy snack 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/2.svg" class="d-block w-100" alt="Healthy snack 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/3.svg" class="d-block w-100" alt="Healthy snack 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/4.svg" class="d-block w-100" alt="Healthy snack 4">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/5.svg" class="d-block w-100" alt="Healthy snack 5">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/6.svg" class="d-block w-100" alt="Healthy snack 6">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/7.svg" class="d-block w-100" alt="Healthy snack 7">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/8.svg" class="d-block w-100" alt="Healthy snack 8">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/9.svg" class="d-block w-100" alt="Healthy snack 9">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/10.svg" class="d-block w-100" alt="Healthy snack 10">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/recipies/snacks/11.svg" class="d-block w-100" alt="Healthy snack 11">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/2.svg" class="d-block w-100" alt="Healthy snack 2">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/3.svg" class="d-block w-100" alt="Healthy snack 3">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/4.svg" class="d-block w-100" alt="Healthy snack 4">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/5.svg" class="d-block w-100" alt="Healthy snack 5">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/6.svg" class="d-block w-100" alt="Healthy snack 6">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/7.svg" class="d-block w-100" alt="Healthy snack 7">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/8.svg" class="d-block w-100" alt="Healthy snack 8">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/9.svg" class="d-block w-100" alt="Healthy snack 9">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/10.svg" class="d-block w-100" alt="Healthy snack 10">
-            </div>
-            <div class="carousel-item">
-                <img src="~/images/recipies/snacks/11.svg" class="d-block w-100" alt="Healthy snack 11">
-            </div>
-        </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </div>
 
 </div>
