changed the breeds page - added contact us link to the bottom, changed breed quiz link to card, moved images

--- a/FinalProject.Web/Views/Calendar/_Calendar.cshtml
+++ b/FinalProject.Web/Views/Calendar/_Calendar.cshtml
@@ -1,6 +1,6 @@
 @model CalendarViewModel
 
-<h4>County @Model.CountyName Event Dates</h4>
+<h1 class="text-center">County @Model.CountyName Event Dates</h1>
 
 <!-- calendar mounted here -->
 <div id='calendar'></div>
