--- a/FinalProject.Web/wwwroot/css/site.css
+++ b/FinalProject.Web/wwwroot/css/site.css
@@ -971,6 +971,25 @@ td.text-end a {
   justify-content: center;
 }
 
+.like-btn {
+  color: #004d2a;
+  text-decoration: none;
+  gap: 5px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+.like-btn:hover {
+  color: #007a50;
+}
+.link-btn:active {
+  transform: scale(0.95);
+}
+
+.like-count {
+  font-weight: bold;
+}
+
 /**********************************Gallery*/
 .gallery-card {
   height: 500px;
