added info message at the top of the events index page

--- a/FinalProject.Web/Views/Home/Breed.cshtml
+++ b/FinalProject.Web/Views/Home/Breed.cshtml
@@ -2,8 +2,8 @@
     <!-- woof and wag banner -->
     <img src="~/images/banners/Breeds.svg" class="banner-full-width img-fluid" alt="Recommended Dog Breeds banner">
 
-    <!--container for search results-->
-    <div class="search-results"></div>
+    @* <!--container for search results-->
+    <div class="search-results"></div> *@
 
     <!-- Breed selection test card at the top -->
     <div class="card mb-4 text-center shadow-lg">
