changed the reviews create to modal instead of going to another page

--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -79,3 +79,4 @@
     <partial name="_Reviews" />
 </div>
 <partial name="_DeleteModal" />
+@await Html.PartialAsync("_CreateReviewModal", new Review { EventId = Model.Id })
