--- a/FinalProject.Web/Views/Event/_Reviews.cshtml
+++ b/FinalProject.Web/Views/Event/_Reviews.cshtml
@@ -6,7 +6,7 @@
     <h3>Reviews</h3>
     @if (User.Identity.IsAuthenticated)
     {
-        <a asp-controller="Event" asp-action="ReviewCreate" asp-route-id="@Model.Id" class="btn btn-sm btn-green"
+        <a asp-action="_CreateReviewModal" class="btn btn-sm btn-green" data-bs-toggle="modal" data-bs-target="#createReviewModal"
             aria-label="create review">
             <i class="bi bi-chat-square-text"></i>
             <span class="ms-1 d-none d-md-inline">Add Review</span>
