breed index page

--- a/FinalProject.Web/Views/Home/Breed.cshtml
+++ b/FinalProject.Web/Views/Home/Breed.cshtml
@@ -2,9 +2,6 @@
     <!-- woof and wag banner -->
     <img src="~/images/banners/Breeds.svg" class="banner-full-width img-fluid" alt="Recommended Dog Breeds banner">
 
-    @* <!--container for search results-->
-    <div class="search-results"></div> *@
-
     <!-- Breed selection test card at the top -->
     <div class="card mb-4 text-center shadow-lg">
         <div class="card-body">
@@ -405,6 +402,8 @@
             </div>
         </div>
     </div>
+    <!-- divider for sections-->
+    <hr class="section-divider">
     <!-- Missing breed suggestion section -->
     <div class="text-center mt-5">
         <p class="fs-4"><strong>Don't see the breed you're looking for?</strong></p>
@@ -412,3 +411,5 @@
             and let us know so we can add it!</p>
     </div>
 </div>
+<!-- divider for sections-->
+    <hr class="section-divider">
