changed review page to modal and changed colour of calendar and made the title visible to all users

--- a/FinalProject.Web/Views/Calendar/_Calendar.cshtml
+++ b/FinalProject.Web/Views/Calendar/_Calendar.cshtml
@@ -12,13 +12,13 @@
 <!-- event ownership event styling -->
 <style>
     .other {
-        background-color: cadetblue;
-        color: white;
+        background-color: #97f7b1;
+        color: #004d2a;
     }
 
     .owner {
-        background-color: cadetblue;
-        color: grey;
+        background-color: #97f7b1;
+        color: #004d2a;
     }
 </style>
 
