--- a/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
+++ b/FinalProject.Web/Views/Event/_CreateReviewModal.cshtml
@@ -9,40 +9,37 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="createReviewForm">
+                <form id="createReviewForm" method="post" asp-action="ReviewCreate" asp-controller="Event">
+                    <input type="hidden" asp-for="EventId" />
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                    <!-- EventId as hidden input -->
-                    <input type="hidden" name="EventId" value="@Model.Id" />
 
                     <div class="mb-3">
                         <label asp-for="Name" class="form-label"></label>
-                        <input asp-for="Name" class="form-control" name="Name" />
+                        <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="On" class="form-label"></label>
-                        <input asp-for="On" class="form-control" name="On" />
+                        <input asp-for="On" type="date" class="form-control" />
                         <span asp-validation-for="On" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="Comment" class="form-label"></label>
-                        <textarea rows="5" asp-for="Comment" class="form-control" name="Comment"></textarea>
+                        <textarea asp-for="Comment" class="form-control"></textarea>
                         <span asp-validation-for="Comment" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="Rating" class="form-label"></label>
-                        <input asp-for="Rating" class="form-control" name="Rating" />
+                        <input asp-for="Rating" type="number" min="1" max="5" class="form-control" />
                         <span asp-validation-for="Rating" class="text-danger"></span>
                     </div>
 
                     <div class="mt-3">
-                        <button type="submit" class="btn btn-green" aria-label="create">Create</button>
-                        <a class="btn btn-secondary" asp-action="Details" asp-route-id=@Model.EventId
-                            aria-label="cancel">Cancel</a>
+                        <button type="submit" class="btn btn-green">Create</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
