--- a/FinalProject.Web/Views/Event/_Reviews.cshtml
+++ b/FinalProject.Web/Views/Event/_Reviews.cshtml
@@ -6,7 +6,7 @@
     <h3>Reviews</h3>
     @if (User.Identity.IsAuthenticated)
     {
-        <a asp-action="_CreateReviewModal" class="btn btn-sm btn-green" data-bs-toggle="modal" data-bs-target="#createReviewModal"
+        <a class="btn btn-sm btn-green" data-bs-toggle="modal" data-bs-target="#createReviewModal"
             aria-label="create review">
             <i class="bi bi-chat-square-text"></i>
             <span class="ms-1 d-none d-md-inline">Add Review</span>
@@ -54,8 +54,9 @@
                 </tr>
                 <!-- Include the delete review modal -->
                 @await Html.PartialAsync("_DeleteReviewModal", r)
-
             }
         }
     </tbody>
 </table>
+
+@await Html.PartialAsync("_CreateReviewModal", new Review { EventId = Model.Id })
