added what we do section to home page

--- a/FinalProject.Web/Views/Home/Index.cshtml
+++ b/FinalProject.Web/Views/Home/Index.cshtml
@@ -25,6 +25,31 @@
 <!-- divider for sections-->
 <hr class="section-divider">
 
+<!--What we do section-->
+<section class="what-we-do-section container mt-5">
+    <h2 class="text-center mb-4">What We Do</h2>
+    <div class="row justify-content-center">
+        <!--First column - Connecting dogs and people-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/connect.jpg" class="img-fluid square-img mb-3" alt="Conntect dogs and people">
+            <h5>Connect Dogs and People</h5>
+            <p>We bring together dogs and their owners to create strong, happy communities and long-lasting friendships.</p>
+        </div>
+        <!--Second column - Recommendations-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/recommendation.jpg" class="img-fluid square-img mb-3" alt="Provide recommendations">
+            <h5>Provide Recommendations</h5>
+            <p>Explore top-rated dog-friendly locations, events, products, and services curated for your furry friend.</p>
+        </div>
+        <!--Third column - Community posts-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/community.jpg" class="img-fluid square-img mb-3" alt="Community post section">
+            <h5>Community Posts</h5>
+            <p>Join our community to share stories, photos, and experiences with like minded dog lovers.</p>
+        </div>
+    </div>
+</section>
+
 <!--Why join woof and wag section-->
 <section class="why-choose-section container mt-5">
     <h2 class="text-center mb-4">Why Choose Woof & Wander?</h2>
