moved the what we do section from home page to about us page

--- a/FinalProject.Web/Views/Home/About.cshtml
+++ b/FinalProject.Web/Views/Home/About.cshtml
@@ -5,6 +5,34 @@
     <!-- Divider for sections -->
     <hr class="section-divider">
 
+    <!--What we do section-->
+<section class="what-we-do-section container mt-5">
+    <h2 class="text-center mb-4">What We Do</h2>
+    <div class="row justify-content-center">
+        <!--First column - Connecting dogs and people-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/connect.jpg" class="img-fluid square-img mb-3" alt="Conntect dogs and people">
+            <h5>Connect Dogs and People</h5>
+            <p>We bring together dogs and their owners to create strong, happy communities and long-lasting friendships.</p>
+        </div>
+        <!--Second column - Recommendations-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/recommendation.jpg" class="img-fluid square-img mb-3" alt="Provide recommendations">
+            <h5>Provide Recommendations</h5>
+            <p>Explore top-rated dog-friendly locations, events, products, and services curated for your furry friend.</p>
+        </div>
+        <!--Third column - Community posts-->
+        <div class="col-md-4 text-center">
+            <img src="~/images/home/wedo/community.jpg" class="img-fluid square-img mb-3" alt="Community post section">
+            <h5>Community Posts</h5>
+            <p>Join our community to share stories, photos, and experiences with like minded dog lovers.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Divider for sections -->
+    <hr class="section-divider">
+
     <div class="container mt-5">
         <div class="row">
             <div class="col-4">
@@ -85,7 +113,7 @@
                             everything our community has to offer. Click the button below to sign up!
                         </p>
                         <div class="text-center mt-4">
-                            <a class="btn btn-primary btn-lg" href="/register">Join the Community</a>
+                            <a class="btn btn-green btn-lg" href="/register">Join the Community</a>
                         </div>
                     </div>
 
@@ -107,7 +135,7 @@
         <div class="row justify-content-center">
             <!-- Card 1 -->
             <div class="col-md-3">
-                <div class="card review-card m-3">
+                <div class="card review-card-about m-3">
                     <img src="~/images/reviews/AboutReview1.jpg" class="card-img-top" alt="Review Image">
                     <div class="card-body review-card-body">
                         <h5 class="card-title">
@@ -126,8 +154,8 @@
 
             <!-- Card 2-->
             <div class="col-md-3">
-                <div class="card review-card m-3">
-                    <img src="~/images/reviews/AboutReview2.jpg" class="card-img-top" alt="Review Image">
+                <div class="card review-card-about m-3">
+                    <img src="~/images/posts/post19.jpg" class="card-img-top" alt="Review Image">
                     <div class="card-body review-card-body">
                         <h5 class="card-title">
                             <i class="bi bi-star-fill star-icon"></i>
@@ -137,7 +165,7 @@
                             <i class="bi bi-star-fill star-icon"></i>
                         </h5>
                         <i class="bi bi-chat-heart"></i>
-                        <p class="card-text">Rex has so much fun playing with like-minded dogs and has gained more confidence!</p>
+                        <p class="card-text">Rex has so much fun playing with like-minded dogs!</p>
                         <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Sarah B</p>
                     </div>
                 </div>
@@ -145,7 +173,7 @@
 
             <!-- Card 3-->
             <div class="col-md-3">
-                <div class="card review-card m-3">
+                <div class="card review-card-about m-3">
                     <img src="~/images/reviews/AboutReview3.jpg" class="card-img-top" alt="Review Image">
                     <div class="card-body review-card-body">
                         <h5 class="card-title">
@@ -164,7 +192,7 @@
 
             <!-- Card 4-->
             <div class="col-md-3">
-                <div class="card review-card m-3">
+                <div class="card review-card-about m-3">
                     <img src="~/images/reviews/AboutReview4.jpg" class="card-img-top" alt="Review Image">
                     <div class="card-body review-card-body">
                         <h5 class="card-title">
@@ -175,7 +203,7 @@
                             <i class="bi bi-star-fill star-icon"></i>
                         </h5>
                         <i class="bi bi-chat-heart"></i>
-                        <p class="card-text">We love going out for walks with other pet owners and meeting new friends!</p>
+                        <p class="card-text">We love going out for walks and meeting new friends!</p>
                         <p class="font-weight-bold review-name"><i class="bi bi-person user-icon"></i><br> Kitty W</p>
                     </div>
                 </div>
