changed the names in navbar company dropdown

--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -73,8 +73,8 @@
                         Company
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="About">About Us</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Privacy">Privacy Policy</a></li>
                         <li><a class="dropdown-item" asp-controller="Contact" asp-action="Contact">Contact Us</a></li>
                     </ul>
                 </li>
