made the privacy and about nav green to match the website instead of blue colour

--- a/FinalProject.Web/Views/Home/Privacy.cshtml
+++ b/FinalProject.Web/Views/Home/Privacy.cshtml
@@ -9,8 +9,8 @@
         <div class="row">
             <div class="col-4">
                 <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-                    <nav class="nav nav-pills flex-column">
-                        <a class="nav-link" href="#introduction">Introduction</a>
+                    <nav class="nav nav-pills flex-column custom-nav-pills">
+                        <a class="nav-link" href="#introduction"><i class="bi bi-info-circle"></i> Introduction</a>
                         <a class="nav-link" href="#information-collection">Information We Collect</a>
                         <a class="nav-link" href="#use-of-information">How We Use Your Information</a>
                         <a class="nav-link" href="#data-protection">How We Protect Your Data</a>
@@ -24,7 +24,7 @@
                 <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true"
                     class="scrollspy-example" tabindex="0">
                     <div id="introduction" class="mb-4">
-                        <h4>Introduction</h4>
+                        <h4><i class="bi bi-info-circle"></i> Introduction</h4>
                         <p>At <strong>Woof & Wander</strong>, we value your privacy and are committed to protecting your
                             personal information. This policy outlines how we collect, use, and safeguard your data.</p>
                         <p>We are dedicated to ensuring that your personal information is used responsibly and in
@@ -114,7 +114,7 @@
                         <h4>Contact Us</h4>
                         <p>If you have any questions, concerns, or requests regarding this privacy policy or your
                             personal information, please contact us at <a
-                                href="mailto:support@woofandwander.com">support@woofandwander.com</a>.</p>
+                                href="mailto:support@woofandwander.com" class="btn-link">support@woofandwander.com</a>.</p>
                         <p>We are committed to addressing your inquiries promptly and transparently. Thank you for
                             trusting us with your information.</p>
                     </div>
