--- a/FinalProject.Web/Views/Home/About.cshtml
+++ b/FinalProject.Web/Views/Home/About.cshtml
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-4">
                 <nav id="about-navbar" class="h-100 flex-column align-items-stretch pe-4 border-end">
-                    <nav class="nav nav-pills flex-column">
+                    <nav class="nav nav-pills flex-column custom-nav-pills">
                         <a class="nav-link" href="#welcome">Welcome</a>
                         <a class="nav-link" href="#what-we-offer">What We Offer</a>
                         <a class="nav-link" href="#why-join">Why Join Us</a>
