added products page and changed links to the right pages on footer

--- a/FinalProject.Web/Views/Shared/_Layout.cshtml
+++ b/FinalProject.Web/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
             <h3>Company</h3>
             <a asp-controller="Home" asp-action="About">About Us</a>
             <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a>
-            <a asp-controller="Home" asp-action="Contact">Contact Us</a>
+            <a asp-controller="Contact" asp-action="Contact">Contact Us</a>
         </div>
         <div class="footer-column">
             <h3>Services</h3>
@@ -91,9 +91,9 @@
     </div>
     <div class="footer-events">
         <h3>Events</h3>
-        <a asp-controller="Event" asp-action="Events">Our Events</a>
-        <a asp-controller="Event" asp-action="Past">Gallery</a>
-        <a asp-controller="Event" asp-action="Calendar">Calendar</a>
+        <a asp-controller="Event" asp-action="Index">Our Events</a>
+        <a asp-controller="Gallery" asp-action="Past">Gallery</a>
+        <a asp-controller="Calendar" asp-action="County">Calendar</a>
     </div>
 
     <!-- Footer Bottom -->
