--- a/FinalProject.Web/wwwroot/css/site.css
+++ b/FinalProject.Web/wwwroot/css/site.css
@@ -1146,3 +1146,42 @@ td.text-end a {
   font-size: 2.5rem;
   padding: 0.5rem;
 }
+
+/*============Products page========*/
+.products {
+  color: #004d2a;
+}
+
+.product-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  min-height: 350px;
+  border: 1px solid #004d2a;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.product-image {
+  object-fit: cover;
+  height: 400px;
+  width: 100%;
+}
+
+.product-card-container .card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product-card.hidden {
+  display: none !important; /*removes hidden cards from flex flow*/
+}
